send mail during user creation using custom event

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=674ff83fc79861628c8a061b71ef7c12
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=null://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
