--- a/.env
+++ b/.env
@@ -38,3 +38,4 @@ MAILER_DSN=null://localhost
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+# MAILER_URL=gmail://arbandry:password@localhost
