--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    # Event qcm
+    App\EventSubscriber\DatabaseActivitySubscriber:
+        tags:
+            - { name: 'doctrine.event_subscriber', connection: 'default' }
